@@ -62,6 +62,18 @@ effort to the development.
     <A HREF="http://www.mitre.org">The MITRE Corporation</A>
   </TD>
 </TR>
+<!-- Entry -->
+<TR BGColor="#EEEEEE">
+  <TD VALIGN="TOP">
+    <A HREF="mailto:peter.vanderbeken@pandora.be">Van der Beken, Peter</A>
+  </TD>
+  <TD VALING="TOP">
+    Mozilla integration, and Macintosh porting issues.
+  </TD>
+  <TD VALIGN="TOP">
+    <BR>
+  </TD>
+</TR>
 
 </TABLE>
 </P>
@@ -72,6 +84,19 @@ The following people have contributed to the development.
 <BR>(appearing in alphabetical order)
 <TABLE WIDTH="100%" CELLSPACING="1">
 <TR BGColor="#EEEEEE"><TH>Name</TH><TH>Contribution</TH><TH>Company</TH></TR>
+
+<!-- Entry -->
+<TR BGColor="#EEEEEE">
+  <TD VALIGN="TOP">
+    <A HREF="mailto:bbrown@solana.com">Brown, William Lewis</A>
+  </TD>
+  <TD WIDTH="300">
+    Working with Marina on XSLT 1.0 conformity issues.
+  </TD>
+  <TD VALIGN="TOP">
+    <BR>
+  </TD>
+</TR>
 
 <!-- Entry -->
 <TR BGColor="#EEEEEE">
@@ -93,7 +118,9 @@ The following people have contributed to the development.
     <A HREF="mailto:lef@opentext.com">Fitzpatrick, Larry</A>
   </TD>
   <TD WIDTH="300">
-    C++ porting issues with Visual C++, design influences
+    Larry was the first contributor to the project. He sent
+    a number of C++ porting issues with Visual C++, 
+    and has influenced some of the early design.
   </TD>
   <TD VALIGN="TOP">
     <A HREF="http://www.opentext.com">OpenText</A>
@@ -155,6 +182,20 @@ The following people have contributed to the development.
 <!-- Entry -->
 <TR BGColor="#EEEEEE">
   <TD VALIGN="TOP">
+    <A HREF="mailto:joe@pwd.hp.com">Kuan, Joseph</A>
+  </TD>
+  <TD WIDTH="300">
+    Sent changes for getting TransforMiiX to build on HPUX, SUNOS and AIX.
+    <I>I still need to add these into the CVS.</I>
+  </TD>
+  <TD VALIGN="TOP">
+    <A HREF="http://www.hp.com">Hewlett-Packard</A>
+  </TD>
+</TR>
+
+<!-- Entry -->
+<TR BGColor="#EEEEEE">
+  <TD VALIGN="TOP">
     <A HREF="mailto:mclee@oblix.com">Lee, Michele</A>
   </TD>
   <TD WIDTH="300">
@@ -184,7 +225,7 @@ The following people have contributed to the development.
     <A HREF="mailto:mmarina@mindspring.com">Mechtcheriakova, Marina</A>
   </TD>
   <TD WIDTH="300">
-    Unicode bug fix with XMLParser.cpp
+    A number of bug fixes, and conformity issues.
   </TD>
   <TD VALIGN="TOP">
     <BR>
@@ -217,19 +258,7 @@ The following people have contributed to the development.
   </TD>
 </TR>
 
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:peter.vanderbeken@pandora.be">Van der Beken, Peter</A>
-  </TD>
-  <TD WIDTH="300">
-    Macintosh porting issues, submitted Mozilla integration code for URIUtils.cpp 
-    (Not yet in CVS, to be commited over the weekend)
-  </TD>
-  <TD VALIGN="TOP">
-    <BR>
-  </TD>
-</TR>
+
 
 </TABLE>
 
@@ -248,8 +277,14 @@ beneficial to the development.
 
 <!-- Entry -->
 <TR BGColor="#EEEEEE">
-  <TD><A HREF="mailto:tlebouil@lucent.com@mitre.org">Le Bouil, Thierry</A></TD>
+  <TD><A HREF="mailto:tlebouil@lucent.com">Le Bouil, Thierry</A></TD>
   <TD><A HREF="http://www.lucent.com">Lucent Technologies, Inc.</A></TD>
+</TR>
+
+<!-- Entry -->
+<TR BGColor="#EEEEEE">
+  <TD><A HREF="mailto:jiwei.wang@saraide.com">Wang, Jiwei</A></TD>
+  <TD><BR></TD>
 </TR>
 
 </TABLE>
